# website

./: .Rprofile  .gitignore  .renvignore  10_introduction.Rmd  20_data.Rmd  21_WRDS.Rmd  21_trace_and_fisd.Rmd  22_trace_and_fisd.Rmd  22_trace_and_fisd.md  24_Other.Rmd  24_other.Rmd  30_beta.Rmd  31_beta.Rmd  31_univariate_sorts.Rmd  32_size_and_portfolio_building.Rmd  32_univariate_sorts.Rmd  33_size_and_portfolio_building.Rmd  33_value_and_bivariate.Rmd  34_fama_french_replication.Rmd  34_value_and_bivariate.Rmd  35_fama_french_replication.Rmd  35_fama_macbeth.Rmd  36_SV_fama_macbeth.Rmd  36_fama_macbeth.R  36_fama_macbeth.Rmd  404.html  40_factor_selection_with_machine_learning.Rmd  40_fixed_effects_and_clustering.Rmd  41_difference_in_differences.Rmd  41_factor_selection_with_machine_learning.Rmd  41_option_pricing_via_machine_learning.Rmd  42_factor_selection_with_machine_learning.Rmd  42_fixed_effects_and_clustering.Rmd  42_fixed_effects_and_clustering.md  42_option_pricing_via_machine_learning.Rmd  43_option_pricing_via_machine_learning.Rmd  44_stock_recommender_system.R  44_stock_recommender_system.Rmd  44_stock_recommender_system.html  50_parametric_portfolio_policies.Rmd  (+72 more)
.claude/: settings.local.json
.github/: FUNDING.yml
_book/: 404.html  about.qmd  accessing-managing-financial-data.html  bivariate-sorts-value.html  blog.qmd  constraint-optimization-and-portfolio-backtesting.html  estimating-beta.html  factor-selection-via-machine-learning.html  index.html  intro.html  introduction-to-tidy-finance.html  option-pricing-via-machine-learning-methods.html  parametric-portfolio-policies.html  references.html  search.json  search_index.json  summary.html  univariate-sorts-firm-size.html  (+1 more)
(+925 files in other folders)
