[project]
name = "TFWP"
version = "0.1.0"
description = "Dependencies for the chapters of Tidy Finance with Python"
requires-python = ">=3.10"
dependencies = [
    "adjusttext>=1.3.0",
    "fmpapi>=1.0.0",
    "joblib>=1.5.3",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "plotnine>=0.15.1",
    "tidyfinance>=0.2.5",
]
