[project]
name = "TFWP"
version = "0.1.0"
description = "Dependencies for the chapters of Tidy Finance with Python"
requires-python = ">=3.10"
dependencies = [
    "adjusttext>=1.3.0",
    "fmpapi>=1.0.0",
    "joblib>=1.5.3",
    "jupyter>=1.1.1",
    "nbformat>=5.10.4",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "plotnine>=0.15.1",
    "pyfixest>=0.40.0",
    "regtabletotext>=0.0.12",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "sqlalchemy>=2.0.45",
    "statsmodels>=0.14.6",
    "tidyfinance>=0.2.5",
]
