[project]
name = "TFWP"
version = "0.1.0"
description = "Dependencies for the chapters of Tidy Finance with Python"
requires-python = ">=3.10"
dependencies = [
    "adjusttext>=1.3.0",
    "arrow>=1.4.0",
    "fmpapi>=1.0.0",
    "formulaic>=1.2.1",
    "great-tables>=0.20.0",
    "httpimport>=1.4.1",
    "joblib>=1.5.3",
    "jupyter>=1.1.1",
    "jupyter-cache>=1.0.1",
    "nbformat>=5.10.4",
    "numba>=0.63.1",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "plotnine>=0.15.1",
    "pyfixest>=0.40.0",
    "regtabletotext>=0.0.12",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.45",
    "statsmodels>=0.14.6",
    "tidyfinance>=0.2.5",
    "tqdm>=4.67.1",
    "xlrd>=2.0.2",
]
